--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               </svg>
 
             
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit, voluptate ab corrupti quia iure laudantium.</p>
+            <p>Lorem ipsum, dolor sit amet conadipisicing elit, voluptate ab corrupti quia iure laudantium.</p>
         </section>
         <section>
 
